--- a/money_manager/pubspec.yaml
+++ b/money_manager/pubspec.yaml
@@ -34,21 +34,17 @@ dependencies:
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
   get_it: ^7.2.0
-  # Value equality
   equatable: ^2.0.5
-  # Functional programming thingies
   dartz: ^0.10.1
   http: ^0.13.5
-  # Local cache
   shared_preferences: ^2.0.15
   internet_connection_checker: ^0.0.1+2
   json_annotation: ^4.7.0
   intl: ^0.18.0
   lifecycle: ^0.6.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  fl_chart: ^0.55.2
   cupertino_icons: ^1.0.2
+  material_segmented_control: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,12 +53,6 @@ dev_dependencies:
   mobx_codegen: ^2.1.1
   mockito: ^5.3.2
   json_serializable: ^6.5.4
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
