--- a/money_manager/pubspec.yaml
+++ b/money_manager/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   fl_chart: ^0.55.2
   cupertino_icons: ^1.0.2
   material_segmented_control: ^4.0.0
-
+  flutter_form_builder: ^3.8.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
