--- a/money_manager/pubspec.yaml
+++ b/money_manager/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   material_segmented_control: ^4.0.0
   flutter_form_builder: ^7.7.0
+  uuid: ^3.0.7
   
 dev_dependencies:
   flutter_test:
